--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -162,11 +162,15 @@ img {
 
     h1 {
         font-size: 3rem;
+        width:90%;
     }
 
     h2 {
         font-size:2rem;
         margin:30px 0 20px 0;
+        padding:0 30px;
+        width:100%;
+        text-align: center;
     }
 
     .shirt-collection {
